Fix for bug #5915 "ALTER TABLE behaves differently when converting column to auto_increment in 4.1". Now we are enforcing NO_AUTO_VALUE_ON_ZERO mode during ALTER TABLE only if we are converting one auto_increment column to another auto_increment column (this also includes most common case when we don't do anything with such column).

Also now when we convert some column to TIMESTAMP NOT NULL column with
ALTER TABLE we convert NULL values to current timestamp, (as we do this
in INSERT). One can still get old behavior by setting system TIMESTAMP
variable to 0.